--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 <div class="project-grid">
 {% for project in site.projects %}
     <a href="{{ site.url }}{{ project.url }}">
-        <div class="project-grid-container">
+        <div class="project-grid-container" {% if project.bordercolor %}style="border: 1px solid #{{ project.bordercolor }}"{% endif %}>
             <img class="project-grid-image" src="{{ site.url }}{{ project.url }}{{ project.thumbnail }}" alt="Project Image">
             <h1 class="project-grid-title">{{ project.title }}</h1>
             <p class="project-grid-text">{{ project.description }}</p>
