--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
 ---
-layout: default
+layout: project-gallery
+title: Portfolio
 ---
-
-<h1>Portfolio</h1>
-
-<br>
-
-<div class="project-grid">
-    {% for project in site.projects %}
-    {% if project.gallery %}
-    <a href="{{ site.url }}{{ project.url }}">
-        <div class="project-grid-container" {% if project.bordercolor %}style="border: 1px solid #{{ project.bordercolor }}" {% endif %}>
-            <img class="project-grid-image" src="{{ site.url }}{{ project.url }}{{ project.thumbnail }}" alt="Project Image">
-            <h1 class="project-grid-title">{{ project.title }}</h1>
-            <p class="project-grid-text">{{ project.description }}</p>
-            <p class="project-grid-text">{{ project.role }}</p>
-            <p class="project-grid-year">{{ project.year }}</p>
-        </div>
-    </a>
-    {% endif %}
-    {% endfor %}
-</div>
